<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:circularflow_radiusInDP="10"
    tools:context=".Edit_section">


    <RelativeLayout
        android:id="@+id/secondheadr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow">

        </ImageView>

        <TextView
            android:id="@+id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/heading2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="3dp"
            android:layout_below="@+id/heading"
            android:background="#33000000"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="56dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btnsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/secondheadr"
        android:paddingRight="25dp">

        <Button
            android:id="@+id/savebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/black"
            android:text="@string/btn_save"
            app:cornerRadius="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activitytwo__pro_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsave"
        android:paddingLeft="25dp"

        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Update_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profileimage" />

        <Button
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@+id/Update_profile_image"
            android:text="@string/choose_image"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="#000000"
            app:cornerRadius="10dp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/formpartone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activitytwo__pro_info"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp">

        <TextView
            android:id="@+id/textname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textname"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_name"
            android:textSize="17sp"

            />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/formparttwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formpartone"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"

        >

        <TextView
            android:id="@+id/textemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_email"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textemail"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_email"
            android:textSize="17sp"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/formpartthree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formparttwo"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp"

        >

        <TextView
            android:id="@+id/textabout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_you"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/editabout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textabout"
            android:layout_marginRight="30dp"
            android:hint="@string/hint_about"
            android:textSize="17sp"

            />

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/buttonset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formpartthree"
        android:layout_marginTop="20dp"
        android:paddingLeft="30dp">


        <Button
            android:id="@+id/upate"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/btn_update"
            android:textAlignment="center"
            app:backgroundTint="#000000"
            app:cornerRadius="10sp"
            android:gravity="center_horizontal">

        </Button>


        <Button
            android:id="@+id/delete"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/btn_delete"
            android:layout_toRightOf="@+id/upate"
            android:textAlignment="center"
            app:backgroundTint="#000000"
            android:layout_marginLeft="155dp"
            app:cornerRadius="10sp"
            android:gravity="center_horizontal">

        </Button>


    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_vectorhome"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_vectorbookmark"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_vectorpost"
                tools:ignore="VectorDrawableCompat" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_vectorperson"
                tools:ignore="VectorDrawableCompat" />
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:background="#80000000"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>