<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewEditList">

    <EditText
        android:id="@+id/ET_EnterEditDiscription"
        android:layout_width="380dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#66AAAAAA"

        android:fontFamily="@font/cabin_semibold"
        android:gravity="start"
        android:hint="@string/editText_EnterTopic"
        android:paddingLeft="8dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editdiscriptionLable" />

    <TextView
        android:id="@+id/tv_editdiscriptionLable"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_editdiscriptionLable"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_EnterEditTopic" />

    <Button
        android:id="@+id/btn_editList_Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#F5000000"
        android:text="@string/btn_editListUpdate"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_EnterEditDiscription" />

    <TextView
        android:id="@+id/tv_top3"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin_semibold"
        android:scrollHorizontally="false"
        android:text="@string/tv_top3"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="#4D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_top3" />

    <TextView
        android:id="@+id/tv_editTopicLable"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_editTopicLable"

        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/ET_EnterEditTopic"
        android:layout_width="380dp"
        android:layout_height="92dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#66AAAAAA"
        android:fontFamily="@font/cabin_semibold"
        android:gravity="start"
        android:hint="@string/editText_EnterTopic"
        android:paddingLeft="8dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editTopicLable" />

</androidx.constraintlayout.widget.ConstraintLayout>