<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewList">

    <TextView
        android:id="@+id/tv_top5"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cabin_semibold"
        android:scrollHorizontally="false"
        android:text="@string/tv_top5"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:background="#4D000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_top5" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#000000"
        android:text="@string/btn_create"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_EnterDiscription" />

    <EditText
        android:id="@+id/ET_EnterEditTopic"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:background="#33AAAAAA"
        android:fontFamily="@font/cabin_semibold"
        android:gravity="start"
        android:hint="@string/editText_EnterTopic"
        android:paddingLeft="8dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintCircleRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_top5" />

    <EditText
        android:id="@+id/ET_EnterDiscription"
        android:layout_width="0dp"
        android:layout_height="275dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#33AAAAAA"
        android:fontFamily="@font/cabin_semibold"
        android:gravity="start"
        android:hint="@string/editText_EnterDescription"
        android:paddingLeft="8dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintCircleRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET_EnterEditTopic" />

</androidx.constraintlayout.widget.ConstraintLayout>